--- a/index.html
+++ b/index.html
@@ -83,15 +83,11 @@
         </style>
     </head>
     <body>
-        <hgroup>
 
-        <h1>SUPERKAME</br> <b>AUTOMOBILIUS</b> IR <b>ŽEMĖS ŪKIO TECHNIKĄ </b> </br>UŽ GERĄ KAINĄ</h1>
+        <h1>SUPERKAME<br/> <b>AUTOMOBILIUS</b> IR <b>ŽEMĖS ŪKIO TECHNIKĄ </b> <br/>UŽ GERĄ KAINĄ</h1>
         <h2>SKAMBINKITE +37068671303</h2>
-        <h3>ATSISKAITOME GRYNAIS</br>VISOJE LIETUVOJE</h3>
+        <h3>ATSISKAITOME GRYNAIS<br/>VISOJE LIETUVOJE</h3>
 
-        </hgroup>
-
-        
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
